@@ -1,14 +1,11 @@
 package com.devonfw.tools.ide.tool.terraform;
 
-import java.util.List;
 import java.util.Set;
 
 import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
-import com.devonfw.tools.ide.process.ProcessMode;
 import com.devonfw.tools.ide.tool.LocalToolCommandlet;
 import com.devonfw.tools.ide.tool.ToolCommandlet;
-import com.devonfw.tools.ide.tool.ToolInstallRequest;
 
 /**
  * {@link ToolCommandlet} for terraform CLI (terraform).
@@ -23,13 +20,6 @@ public class Terraform extends LocalToolCommandlet {
   public Terraform(IdeContext context) {
 
     super(context, "terraform", Set.of(Tag.IAC));
-  }
-
-  @Override
-  protected void postInstallOnNewInstallation(ToolInstallRequest request) {
-
-    super.postInstallOnNewInstallation(request);
-    runTool(request, ProcessMode.DEFAULT, List.of("-install-autocomplete"));
   }
 
   @Override
