@@ -9,6 +9,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/IDEasy/issues/39[#39]: Implement ToolCommandlet for pip
 * https://github.com/devonfw/IDEasy/issues/1633[#1633]: CVE suggestions show unstable versions
 * https://github.com/devonfw/IDEasy/issues/1636[#1636]: CVE suggestion scoring more reasonable
+* https://github.com/devonfw/IDEasy/issues/1640[#1640]: StackOverflowError: Infinity loop whilst installing terraform
 
 The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/38?closed=1[milestone 2025.12.001].
 
